# CMakeExample

./: CMakeLists.txt  README.md
cmake/: FindGREETING.cmake
greeting/: CMakeLists.txt  greeting.cpp  greeting.h
include/: Config.h.in
src/: CMakeLists.txt  main.cpp
